package ma.ensias.soa.paymentservice.enums;

public enum PlanType {
    MONTHLY,
    ANNUAL
}
